// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner renders 1`] = `
<div
  className="sc-dAoLme jxgugp"
>
  <div
    className="sc-inlEHy itKAVX"
  >
    <div
      className="sc-fusXOv fgEDRg"
    >
      <div
        className="sc-xIxFg gIRSJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-bSQsih fLlkTC"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lohPeM bLuILi"
  />
</div>
`;

exports[`Banner renders in mobile mode 1`] = `
<div
  className="sc-dAoLme cyTBSC"
>
  <div
    className="sc-inlEHy itKAVX"
  >
    <div
      className="sc-fusXOv fgEDRg"
    >
      <div
        className="sc-xIxFg gIRSJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-bSQsih fLlkTC"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lohPeM bLuILi"
  >
    <span>
      <button
        className="sc-jxUbYT cmTSxM"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dZldlu fkiYmq"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-jxUbYT dazUMb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dZldlu fkiYmq"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders in single line mode 1`] = `
<div
  className="sc-dAoLme jxgugp"
>
  <div
    className="sc-inlEHy RVLAS"
  >
    <div
      className="sc-bSQsih PfGxY"
    >
      Your email is not verified. Verify to enable withdrawals.
    </div>
    <div
      className="sc-lohPeM bLuILi"
    >
      <button
        className="sc-jxUbYT eiHueD"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Resend verification link to email ›
        <div
          className="sc-dZldlu fkiYmq"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Banner renders with buttons 1`] = `
<div
  className="sc-dAoLme bXteL"
>
  <div
    className="sc-inlEHy itKAVX"
  >
    <div
      className="sc-fusXOv fgEDRg"
    >
      <div
        className="sc-xIxFg gIRSJd"
      >
        Title here
      </div>
    </div>
    <div
      className="sc-bSQsih fLlkTC"
    >
      Lorem ipsum dolor...
    </div>
  </div>
  <div
    className="sc-lohPeM bLuILi"
  >
    <span>
      <button
        className="sc-jxUbYT cmTSxM"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Discard
        <div
          className="sc-dZldlu fkiYmq"
        />
      </button>
    </span>
    <span>
      <button
        className="sc-jxUbYT dazUMb"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        size="medium"
      >
        Confirm
        <div
          className="sc-dZldlu fkiYmq"
        />
      </button>
    </span>
  </div>
</div>
`;

exports[`Banner renders with buttons RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="sc-dAoLme bXteL"
  >
    <div
      className="sc-inlEHy itKAVX"
    >
      <div
        className="sc-fusXOv fgEDRg"
      >
        <div
          className="sc-xIxFg gIRSJd"
        >
          Title here
        </div>
      </div>
      <div
        className="sc-bSQsih fLlkTC"
      >
        Lorem ipsum dolor...
      </div>
    </div>
    <div
      className="sc-lohPeM bLuILi"
    >
      <span>
        <button
          className="sc-jxUbYT cmTSxM"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Discard
          <div
            className="sc-dZldlu fkiYmq"
          />
        </button>
      </span>
      <span>
        <button
          className="sc-jxUbYT dazUMb"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          size="medium"
        >
          Confirm
          <div
            className="sc-dZldlu fkiYmq"
          />
        </button>
      </span>
    </div>
  </div>
</div>
`;

exports[`Banner renders with header icon 1`] = `
<div
  className="sc-dAoLme jxgugp"
>
  <div
    className="sc-inlEHy itKAVX"
  >
    <div
      className="sc-fusXOv fgEDRg"
    >
      <div
        className="sc-xIxFg gIRSJd"
      >
        Title here
      </div>
      <div
        className="sc-crMKhx logKHT"
      >
        <svg
          className="sc-JZRVG"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </div>
    </div>
    <div
      className="sc-bSQsih fLlkTC"
    >
      Lorem ipsum dolor...
    </div>
  </div>
</div>
`;
